feat: add memoization app with on-chain interaction and UI components
- Added `MemoApp` component for posting messages to the blockchain.
- Introduced `OnchainPreview` component to display on-chain message count.
- Created `Providers` component for React Query and Wagmi context.
- Added utility functions for class name merging.
- Updated `package.json` with new dependencies including React Query and Wagmi.
- Created `components.json` for component configuration.

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 !.yarn/plugins
 !.yarn/releases
 !.yarn/versions
+.codex/*
 
 # testing
 /coverage
@@ -32,6 +33,12 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+
+# foundry
+/0xMemo/out/
+/0xMemo/cache/
+/0xMemo/broadcast/
+/0xMemo/coverage/
 
 # vercel
 .vercel
