--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "viem": "^2.21.0",
     "wagmi": "^2.16.0"
